# embedded

./:  FreeRTOS_helpers.c  CMakeLists.txt  FreeRTOSConfig.h  Readme.md  blink.c  lab4.c  lwipopts.h
include/: CMakeLists.txt  FreeRTOS.h  FreeRTOSConfig.h  lwipopts.h
lwip/: sockets.h
lwipopts/: lwipopts.h
pico_w/wifi/blink/: picow_blink.c
pico_w/wifi/freertos/ping/: CMakeLists.txt  picow_freertos_ping.c
pico_w/wifi_backup/freertos/ping/: CMakeLists.txt  picow_freertos_ping.c
